some flickering bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,8 @@ body {
     min-height: 100vh;
     justify-content: center;
     align-items: center;
+    scroll-behaviour  : smooth;
 }
-
 .animation {
     position: absolute;
     top: 0;
